# bevy_practice

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: actions.yml  deploy.yml  tests.yml
src/: attack.rs  global_settings.rs  main.rs  player_input.rs  ui.rs  util.rs
src/ai/: mod.rs
src/ai/behavior/: mod.rs
src/cascade_input/: axis.rs  button.rs  button_like.rs  mod.rs
src/character_control/: grounded_states.rs  locomotion_system.rs  mod.rs
src/projectile_spawner/: mod.rs  simple_ball.rs  states.rs
src/util/: ecs.rs  mod.rs  state_machine.rs
web_play/: index.html
