[package]
name = "bevy_practice"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11" }
bevy_rapier3d = { version = "0.22" }
seldom_state = { version = "0.8" }
genawaiter = { version = "0.99" }
bevior_tree = { version = "0.3" }

[dev-dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
